--- a/giohang.html
+++ b/giohang.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html">Trang chủ</a></li>
                 <li><a href="sanpham.html">Sản phẩm</a></li>
                 <li><a href="dangnhap.html">Đăng nhập</a></li>
-                <li><a href="dangki.html">Đăng kí</a></li>
+                <li><a href="dangki.php">Đăng kí</a></li>
                 <li><a href="giohang.html">Giỏ hàng</a></li>
             </ul>
         </nav>
